--- a/styles/styles.css
+++ b/styles/styles.css
@@ -163,3 +163,68 @@ header .nav img {
 .google-conteiner__filter .author--google a {
   text-decoration: none;
 }
+footer {
+  width: 100%;
+  min-height: 20px;
+  min-width: 320px;
+  font-family: arial, sans-serif;
+  font-size: 0.2rem;
+}
+footer .origin {
+  width: 100%;
+  min-width: 320px;
+  min-height: 10px;
+  color: rgba(2, 0, 0, 0.54);
+  height: 10%;
+  background-color: #f2f2f2;
+}
+footer .footer-conteiner {
+  width: 100%;
+  min-width: 320px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #f2f2f2;
+}
+footer a:hover {
+  cursor: pointer;
+  text-decoration: rgba(2, 0, 0, 0.54);
+}
+.footer-conteiner ul {
+  list-style-type: none;
+  display: flex;
+}
+
+.footer-conteiner ul a {
+  text-decoration: none;
+  color: rgba(2, 0, 0, 0.54);
+}
+
+.footer-conteiner .google-info {
+  min-width: 320px;
+  min-height: 10px;
+  height: 100%;
+  display: flex;
+
+  justify-content: center;
+}
+
+.footer-conteiner .search-info {
+  min-width: 320px;
+  height: 100%;
+  min-height: 10px;
+  display: flex;
+  justify-content: center;
+}
+.footer-conteiner .search-info a {
+  text-decoration: none;
+  color: rgba(2, 0, 0, 0.54);
+}
+.footer-conteiner .terminos-info {
+  min-width: 320px;
+  display: flex;
+
+  min-height: 10px;
+  justify-content: center;
+  height: 100%;
+}
